docker ready to deploy with spark submit

--- a/docker_jar/Dockerfile
+++ b/docker_jar/Dockerfile
@@ -3,6 +3,7 @@ MAINTAINER jgc
 
 COPY lib/fbid2017-assembly-0.1.jar /home/fbid2017-assembly-0.1.jar
 COPY lib/jdk-8u151-linux-x64.tar.gz /usr/local/jdk-8u151-linux-x64.tar.gz
+COPY lib/spark-2.2.1-bin-hadoop2.7.tgz /usr/local/spark-2.2.1-bin-hadoop2.7.tgz
 COPY ./docker-entrypoint.sh /
 
 #RUN mkdir /home/data
@@ -15,6 +16,8 @@ COPY data/user_artist_data_1000.txt /home/data/user_artist_data_1000.txt
 RUN tar zfx /usr/local/jdk-8u151-linux-x64.tar.gz  -C /usr/local/ \
     && rm -rf $JAVA_HOME/man \
     && rm /usr/local/jdk-8u151-linux-x64.tar.gz
+RUN tar zfx /usr/local/spark-2.2.1-bin-hadoop2.7.tgz  -C /usr/local/ \
+    && rm /usr/local/spark-2.2.1-bin-hadoop2.7.tgz
 RUN apt-get update \
  && apt-get install -y iputils-ping \
  && apt-get install -y curl
